* Change move Padrino.current_controller in public apis
* Enhancement, now Padrino::Reloader works without ActiveSupport::Dependency or with it disabled #567 [Thanks Bernerdschaefer]
* Cleanup padrino-core dependencies now we have less less ActiveSupport dependencies, we are very very thin finally!
* Fix bundler gem dependency mismatch #553

== 0.9.29

* Cleanup SupportLite
* Cleanup Reloader
* Cleanup Padrino::Application
* Cleanup Gemfile generation
* Cleanup Reloader
* Cleanup Application Server
* Improved Reloader
* Decoupled Reloader, Loader, Application
* Fixed Reloader in some extreme scenarios
* Make methods of Padrino::Application that act as Padrino Core
* Fixed error logging
* Added Padrino.clear, useful to clean a Padrino Enviroment
* Improved granularity of our reloader locking and prevent reloading of unnecessary deps
* Use Sequel::Model.db= instead of DB= because is more simple change on the fly connections
* Added compatibility with CouchRest::Model 1.1+
* Cleanup support lite and improved compatiblity with jruby
* Expose Padrino::Application.load_paths
* Added a new method to load custom app dependencies
* Added a new format helper 'truncate_words' [Thanks cearls!]
* Fixes support for local vars passing in render
* Rake 0.9 and 0.8.7 compat
* Use Rack::Flash as Rails do
* Fix a deprecation with model_name.human

== 0.9.28

* Fixed couchrest Account Model
* Generate SystemTimer for Mongoid only if Ruby 1.8 [Thanks to RoryO]
* Generate SystemTimer for Mongomapper only if Ruby 1.8
* Add `padrino s` as alias for `padrino start`
* Fixed Gemfile for couchrest
* Updated Gemfile for mongoid
* Fix a possible loop in require_dependencies
* Added padrino rake gen useful to create a Rakefile to handle for example with heroku

== 0.9.27

* Use sass gem, because now is separated from haml
* Escape regex in our reloader
* Use CouchRest::Model instead of CouchRest::ExtendedDocument [Thanks Burgestrand!]