@@ -1,5 +1,6 @@
 #!/usr/bin/env ruby
 require 'rubygems' unless defined?(Gem) # Useful only on --dev mode
+require 'bundler/setup' if File.exist?("Gemfile")
 
 padrino_core_path = File.expand_path('../../lib', __FILE__)
 $:.unshift(padrino_core_path) if File.directory?(padrino_core_path) && !$:.include?(padrino_core_path)
