@@ -1,6 +1,6 @@
 ### AUTOMATICALLY GENERATED. DO NOT EDIT!
 require 'padrino-core'
-require 'padrino-helpers'
 require 'padrino-mailer'
+require 'padrino-helpers'
 require 'padrino-admin'
 require 'padrino-cache'
